macro-utils/tests/ui/generate/fail/expect_bytes.stderr
error: expected byte string literal
  --> tests/ui/generate/fail/expect_bytes.rs:10:14
   |
10 |         str: 20,
   |              ^^
